--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.2",
-    "parcel": "^2.9.2"
+    "parcel": "^2.9.2",
+    "sharp": "^0.31.3"
   }
 }
